--- a/5. SampleGame/app/src/main/res/layout/activity_main.xml
+++ b/5. SampleGame/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.activity.MainActivity">
 
-    <kr.ac.kpu.game.s2015182003.samplegame.GameView
+    <kr.ac.kpu.game.s2015182003.samplegame.ui.view.GameView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
