--- a/TermProject/app/src/main/res/layout/activity_play.xml
+++ b/TermProject/app/src/main/res/layout/activity_play.xml
@@ -5,11 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PlayActivity">
+    tools:context=".PlayActivity"
+    android:background="@drawable/football_field"
+    >
 
     <kr.ac.kpu.game.s2015182003.termproject.GameView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
+
 
 </LinearLayout>
