--- a/TermProject/app/src/main/res/layout/activity_main.xml
+++ b/TermProject/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <TextView
         android:id="@+id/textView1"
